# PlusPlusC

./: Brewfile  CMakeLists.txt  Makefile  README.md  main.cpp
hello/: CMakeLists.txt  hello.cpp  sourceslist.cmake
